# zoomy-firedrake

./: .gitignore  README.md  firedrake_solver.py  firedrake_solver_amr.py  firedrake_solver_animate_amr.py  firedrake_solver_vi_amr.py  pyproject.toml
tests/: _swe2d_common.py  conftest.py  test_eigensolve.py  test_interval_mesh_adapter.py  test_swe2d_dam_break_wetdry.py  test_swe2d_diffusion.py  test_swe2d_diffusion_dg1.py  test_swe2d_manning.py  test_swe2d_smooth_manning.py  test_swe2d_wetdry.py  test_time_position_source_req185.py
zoomy_firedrake/: eigensolve.py  firedrake_compat.py  firedrake_solver.py  firedrake_solver_animate_amr.py  firedrake_solver_linimpl.py  limiter_kernels.py  p_weighted_limiter.py
