[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "zoomy-firedrake"
version = "0.1.0"
description = "zoomy_firedrake is the firedrake backend of Zoomy: A simulation software for dimensionally-reduced free surface flows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GNU" }
authors = [
  { name = "Ingo Steldermann", email = "steldermann@mbd.rwth-aachen.de" }
]
keywords = ["simulation", "shallow flow", "free surface flow", "shallow moments", "shallow water", "VAM", "PETSc", "firedrake", "DMPlex"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Framework :: Jupyter",
]

dependencies = [
  "zoomy-core", 
  "firedrake-animate",
]


[project.urls]
Homepage = "https://github.com/mbd-rwth/Zoomy"
Documentation = "https://mbd-rwth.github.io/Zoomy"
Source = "https://github.com/mbd-rwth/Zoomy"
Issues = "https://github.com/mbd-rwth/Zoomy/issues"


[tool.setuptools.packages.find]
include = ["zoomy_firedrake"]



